test/files/neg/t6289.check
#partest !java26+
t6289/J.java:2: error: method does not override or implement a method from a supertype
#partest java26+
t6289/J.java:2: error: foo() in J does not override or implement a method from a supertype
#partest
  @Override public void foo() { }
  ^
1 error
